# fp-trading-system

./: .gitignore  README.md  README_TEST_AUTO.md  conftest.py  pyproject.toml
docs/memory/: current_task.md  decisions.md  project.md  roadmap.md  strategies_tested.md
results/backtest/: tsmom_is_20260524_metrics.json  tsmom_is_20260525_metrics.json  tsmom_ls_v4_20260531_metrics.json  tsmom_ls_v5_20260531_metrics.json  tsmom_wf_20260525_summary.json  tsmom_wf_v3a_20260525_summary.json
scripts/: run_daily_signal.py  run_is.py  run_is_v4.py  run_is_v5.py  run_wf.py  run_wf_v3a.py
src/trading/adapters/: yahoo_finance.py  yfinance_adapter.py
src/trading/backtest/: runner.py
src/trading/domain/: filters.py  models.py  signal.py  sizing.py
src/trading/domain/metrics/: equity_metrics.py
src/trading/ports/: data_provider.py  data_source.py
tests/: conftest.py
tests/integration/: test_yahoo_adapter.py
tests/unit/: test_filters.py  test_models.py  test_run_daily_signal_helpers.py  test_run_is_helpers.py  test_run_is_v4_helpers.py  test_run_is_v5_helpers.py  test_run_wf_helpers.py  test_run_wf_v3a_helpers.py  test_signal.py  test_sizing.py
tests/unit/adapters/: test_yfinance_adapter.py
tests/unit/backtest/: test_runner.py
tests/unit/domain/metrics/: test_equity_metrics.py
