[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fp-trading-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "ruff>=0.1",
    "pandas-stubs>=2.0",
    "types-python-dateutil>=2.8",
    "numpy>=1.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "UP", "I"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require network)",
]
testpaths = ["tests"]
